--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,10 @@
 name: Docker Build and Push
+
 on:
   workflow_dispatch:
+
 jobs:
-  build-and-push:
+  deploy:
     runs-on: ubuntu-latest
     steps:      
       - name: Build Docker image
